# RenesasSot

./: .gitignore  app.sh  attach.sh  attach_arm.sh  attach_platform.sh  build.sh  create.sh  dump.rdb  start.sh  stop.sh
docker/: .dockerfile.un~  dockerfile  entrypoint.sh
docker/src/: tb4_dds.xml
host_app/: libapriltag.so.3
tb4_tool/: connection_test.sh  reboot_tb4.sh  set_interface.sh
wifi/: set_ip.sh  start_wifi_session.sh  wifi_conn.sh  wifi_conn_new.sh
workspace/arm_ws2/: platform.yaml  tb4_env.sh
workspace/arm_ws2/script/: disable.start_camera_link5_tf.sh  service_arm_home.sh  start_arm_control.sh  start_camera_link5_tf.sh  start_camera_link6_tf.sh  start_grab_test.sh  start_main.sh  start_moveit.sh  start_redis_receive.sh  start_redis_test.sh
workspace/arm_ws2/src/python_moveit_interface/: CMakeLists.txt  package.xml
workspace/arm_ws2/src/python_moveit_interface/srv/: ArmControl.srv  GripperControl.srv  PoseRequest.srv  PoseTransform.srv
workspace/platform_ws/: tb4_env.sh
workspace/platform_ws/config/: localization.yaml  nav2_road.yaml  target_points.toml
workspace/platform_ws/map/: robotsot0403.data  robotsot0403.pgm  robotsot0403.posegraph  robotsot0403.xcf  robotsot0403.yaml  robotsot0403_road.pgm  robotsot0403_road.yaml
workspace/platform_ws/script/: service_nav.sh  start_filted_lidar.sh  start_localization.sh  start_main.sh  start_main_arm.sh  start_main_color.sh  start_nav.sh  start_nav_simple.sh  start_platform.sh  start_tf_repub.sh
workspace/platfrom_ws/: tb4_env.sh
workspace/platfrom_ws/script/: start_filted_lidar.sh
(+57 files in other folders)
