<?xml version="1.0"?>
<package format="3">
  <name>python_moveit_interface</name>
  <version>0.0.0</version>
  <description>Service definition package for MoveIt control</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- 讓 ROS 2 知道這是 interface-only 的套件 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 編譯工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 產生 interface 的工具 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 使用到的 message 類型 -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
